// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Test TimeSample > view state > render initial state > snapshot initial 1`] = `
<div>
  <div>
    <span>
      Current time : 
      -1
    </span>
    <button>
      Get current time
    </button>
  </div>
  <div>
    <span>
      In : 
      false
    </span>
    <button>
      Trigger in
    </button>
  </div>
  <div>
    <span>
      Ticks1 : 
      0
      , ticks2 : 
      0
    </span>
    <button>
      start ticking
    </button>
  </div>
</div>
`;

exports[`Test TimeSample > view state > render some state > snapshot state1 1`] = `
<div>
  <div>
    <span>
      Current time : 
      1313
    </span>
    <button>
      Get current time
    </button>
  </div>
  <div>
    <span>
      In : 
      true
    </span>
    <button>
      Trigger in
    </button>
  </div>
  <div>
    <span>
      Ticks1 : 
      13
      , ticks2 : 
      131313
    </span>
    <button>
      stop ticking
    </button>
  </div>
</div>
`;

exports[`Test TimeSample > view state > render some state > snapshot state2 1`] = `
<div>
  <div>
    <span>
      Current time : 
      1313
    </span>
    <button>
      Get current time
    </button>
  </div>
  <div>
    <span>
      In : 
      ...
    </span>
    <button
      disabled=""
    >
      Trigger in
    </button>
  </div>
  <div>
    <span>
      Ticks1 : 
      13
      , ticks2 : 
      131313
    </span>
    <button>
      stop ticking
    </button>
  </div>
</div>
`;
